# cynic

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  bors.toml  github.out.graphql  release-plz.toml  renovate.json
.jjconflict-base-0/large-api-example/query/: Cargo.toml
cynic/: Cargo.toml
cynic-cli/: Cargo.toml  README.md  file.graphql
cynic-cli/src/: introspect.rs  main.rs
cynic-codegen/: Cargo.toml
cynic-codegen/benches/: parsing.rs  registration.rs
cynic-codegen/src/: argument.rs  argument_struct.rs  attributes.rs  error.rs  field_argument.rs  field_selector.rs  field_type.rs  generic_param.rs  generics_for_serde.rs  graphql_enum.rs  graphql_extensions.rs  ident.rs  input_struct.rs  lib.rs  module.rs  registration.rs  scalars_as_strings.rs  schema.rs  schema_module_attr.rs  selector_struct.rs  struct_field.rs  type_index.rs  type_path.rs  type_validation.rs  utils.rs
cynic-codegen/src/enum_derive/: input.rs  mod.rs
cynic-codegen/src/enum_derive_2/: input.rs  mod.rs
cynic-codegen/src/fragment_arguments_derive/: input.rs  mod.rs
cynic-codegen/src/fragment_derive/: arguments.rs  cynic_arguments.rs  deserialize_impl.rs  fragment_derive_type.rs  fragment_impl.rs  input.rs  mod.rs  schema_parsing.rs  tests.rs  type_ext.rs  type_validation.rs
cynic-codegen/src/fragment_derive_2/: arguments.rs  deserialize_impl.rs  fragment_derive_type.rs  fragment_impl.rs  input.rs  mod.rs  schema_parsing.rs  tests.rs
cynic-codegen/src/idents/: idents.rs  mod.rs  old_ident.rs  renameable.rs
cynic-codegen/src/inline_fragments_derive/: attributes.rs  deserialize_impl.rs  exhaustiveness.rs  inline_fragments_impl.rs  input.rs  mod.rs  tests.rs
cynic-codegen/src/inline_fragments_derive_2/: deserialize_impl.rs  input.rs  mod.rs  tests.rs
cynic-codegen/src/input_object_derive/: field_serializer.rs  input.rs  mod.rs  one_of.rs  pairing.rs  standard.rs  tests.rs
cynic-codegen/src/input_object_derive_2/: field_serializer.rs  input.rs
cynic-codegen/src/query_dsl/: argument_parameter.rs  argument_struct.rs  enum_marker.rs  field_selector.rs  field_type.rs  graphql_enum.rs  graphql_extensions.rs  input_object_marker.rs  input_struct.rs  interface_struct.rs  interfaces_implementations.rs  mod.rs  schema_roots.rs  selection_builder.rs  selector_struct.rs  struct_field.rs  type_lock_marker.rs  union_struct.rs
cynic-codegen/src/query_module/: mod.rs  utils.rs
cynic-codegen/src/query_variable_literals_derive/: input.rs  mod.rs
cynic-codegen/src/query_variables_derive/: mod.rs  (+1 more)
cynic-codegen/tests/: query-dsl.rs  use-schema.rs
cynic-introspection/: Cargo.toml  README.md
cynic-introspection/src/: capabilities.rs  detection.rs  lib.rs  query.rs  query2018.rs  query2021.rs  query_builder.rs  schema.graphql  schema.rs  sdl.rs
cynic-introspection/tests/: detection-tests.rs  sdl_tests.rs  tests.rs
cynic-parser/: CHANGELOG.md  Cargo.toml  README.md
cynic-parser-deser/: CHANGELOG.md  Cargo.toml  README.md
cynic-parser-deser-macros/: Cargo.toml  README.md
cynic-parser-deser-macros/src/: attributes.rs  lib.rs  renames.rs
cynic-parser-deser/src/: deserialize.rs  deserializers.rs  error.rs  lib.rs
cynic-parser-deser/tests/: deser.rs
cynic-parser/ast-generator/: .gitignore  Cargo.toml
cynic-parser/benches/: executable.rs  parsing-benchmark.rs  schema.rs  to-string.rs
cynic-parser/parser-generator/: Cargo.toml
cynic-parser/src/: .lib.rs.pending-snap  ast.rs  builder.rs  errors.rs  lexer.rs  lib.rs  parser.lalrpop  parser.rs  printer.rs  printing.rs  query.ungram  schema.lalrpop  span.rs  syntax.rs  type_system.rs
cynic-parser/tests/: actual_schemas.rs  ast_test.rs  executables.rs  github.rs  report.rs  schema_coordinates.rs  sdl.rs
cynic-proc-macros/: Cargo.toml
cynic-proc-macros/src/: lib.rs
cynic-querygen/: Cargo.toml
cynic-querygen-web/: Brewfile.netlify  Cargo.toml  Makefile  Makefile.toml  index.html
cynic-querygen-web/js/: .tool-versions  index.tsx  package-lock.json  package.json
cynic-querygen-web/src/: entry_page.rs  graphiql_page.rs  lib.rs
cynic-querygen/src/: casings.rs  lib.rs  naming.rs  query.rs  query_parsing.rs  schema.rs  type_ext.rs  type_index.rs  value_ext.rs
cynic-querygen/tests/: github-tests.rs  misc-tests.rs  option-tests.rs  starwars-querygen.rs  starwars-tests.rs
cynic-value-deser/: Cargo.toml
cynic-value-deser-macros/: Cargo.toml
cynic-value-deser-macros/src/: lib.rs
cynic-value-deser/src/: deserialize.rs  deserializers.rs  error.rs  lib.rs
cynic/benches/: deser-data.json  deser.rs
cynic/examples/: simple.graphql  simple.rs  simple_v2.rs
cynic/src/: argument.rs  builders.rs  codable.rs  coercions.rs  core.rs  enums.rs  field.rs  fragments.rs  http.rs  id.rs  inputs.rs  into_argument.rs  lib.rs  maybe_undefined.rs  operation.rs  operation2.rs  query.rs  response.rs  result.rs  scalar.rs  schema.rs  selection_set.rs  upload.rs  utils.rs  variables.rs
cynic/tests/: .skip_include.rs.pending-snap  aliases.rs  arguments.rs  compatability.rs  core-prototype-manual-tests.rs  core-prototype-tests.rs  default-values-tests.rs  enum-arguments.rs  enum-fallbacks.rs  escaping-strings.rs  features.rs  field-directives.rs  flatten.rs  generics_simple.rs  http.rs  inline-fragments.rs  input-object-tests.rs  keyword-queries.rs  maybe_undefined.rs  misc.rs  mutation_generics.rs  other_directives.rs  query-fragment-field-renames.rs  recursive-queries.rs  renames.rs  scalars.rs  simple_schema_tests.rs  skip_include.rs  spread.rs  test-schema.graphql  variables.rs
examples/: Cargo.toml  build.rs
examples/examples/: chrono-scalars.rs  github-mutation.rs  github.rs  manual-reqwest.rs  querying-interfaces.rs  reqwest-async.rs  shortform.rs  spread.rs  starwars.rs  subscriptions.rs  surf-client.rs  variable-inlining.rs
graphql-mocks/: Cargo.toml
graphql-mocks/src/: lib.rs  server.rs
large-api-example/api/: Cargo.toml
schemas/github/: Cargo.toml
tests/querygen-compile-run/: Cargo.toml  build.rs
tests/ui-tests/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: codegen.rs  flags.rs  main.rs
(+1016 files in other folders)
