[workspace]
members = [
    "cynic",
    "cynic-cli",
    "cynic-codegen",
    "cynic-introspection",
    "cynic-proc-macros",
    "cynic-querygen",
    "cynic-querygen-web",
    "examples",
    "schemas/github",
    "tests/querygen-compile-run",
    "tests/ui-tests",
    "cynic-parser",
    "cynic-parser/ast-generator"
]
exclude = ["cynic-parser/parser-generator"]
resolver = "2"

default-members = [
    "cynic",
    "cynic-cli",
    "cynic-codegen",
    "cynic-introspection",
    "cynic-proc-macros",
    "cynic-querygen",
    "cynic-parser"
]

[workspace.package]
authors = ["Graeme Coupar <graeme@turbofish.tech>"]
edition = "2021"
homepage = "https://cynic-rs.dev"
repository = "https://github.com/obmarg/cynic"
license = "MPL-2.0"
version = "3.8.1"
rust-version = "1.72"

[workspace.dependencies]
cynic-parser = { path = "cynic-parser", version = "0.5.0" }
darling = "0.20"
rstest = "0.22"
syn = "2"

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
