[package]
name = "cynic-cli"
description = "A CLI for cynic, a code first GraphQL client for Rust"
keywords = ["graphql", "client", "introspection", "cli"]
readme = "README.md"

version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cynic"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
cynic = { path = "../cynic", version = "3.6.0", features = ["http-reqwest-blocking"] }
cynic-introspection = { path = "../cynic-introspection", version = "3.6.0" }
cynic-querygen = { path = "../cynic-querygen", version = "3.6.0" }
reqwest = { version = "0.12", features = ["blocking"] }
thiserror = "1"

[dev-dependencies]
trycmd = "0.14"
