[package]
name = "cynic-codegen"
version = "3.0.0-beta.3"
authors = ["Graeme Coupar <graeme@polyandglot.dev>"]
edition = "2021"
homepage = "https://cynic-rs.dev"
repository = "https://github.com/obmarg/cynic"
description = "Codegen for cynic - a GraphQL query builder & data mapper for Rust"
license = "MPL-2.0"
documentation = "https://docs.rs/cynic-codegen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rustfmt"]
rustfmt = []
rkyv = ["dep:rkyv"]

[dependencies]
counter = "0.5"
darling = "0.14"
graphql-parser = "0.4.0"
once_cell = "1.9.0"
ouroboros = "0.15"
proc-macro2 = "1.0"
quote = "1.0"
strsim = "0.10.0"
syn = { version = "1.0", features = ["visit-mut"] }
thiserror = "1"

rkyv = { version = "0.7.41", features = ["validation"], optional = true }

[dev-dependencies]
assert_matches = "1.4.0"
insta = "1.17"
maplit = "1.0.2"
rstest = "0.11.0"
