[package]
name = "cynic-introspection"
version = "3.0.0-beta.1"
authors = ["Graeme Coupar <grambo@grambo.me.uk>"]
edition = "2021"

license = "MPL-2.0"
description = "GraphQL API introspection for cynic"
homepage = "https://cynic-rs.dev"
repository = "https://github.com/obmarg/cynic"
documentation = "https://docs.rs/cynic-introspection"
repository = "https://github.com/obmarg/cynic"
keywords = ["graphql", "client", "introspection"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"

[dependencies.cynic]
path = "../cynic"
version = "3.0.0-beta.1"

[dev-dependencies]
assert_matches = "1.4"
insta = "1.4"
maplit = "1.0.2"
reqwest = "0.11"

[dev-dependencies.cynic]
path = "../cynic"
version = "3.0.0-beta.1"
features = ["http-reqwest-blocking"]

[build-dependencies.cynic-codegen]
path = "../cynic-codegen"
version = "3.0.0-beta.1"
