[package]
name = "cynic-introspection"
description = "GraphQL API introspection for cynic"
keywords = ["graphql", "client", "introspection"]
documentation = "https://docs.rs/cynic-introspection"
readme = "README.md"

authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["sdl"]
sdl = ["indenter"]

[dependencies]
indenter = { version = "0.3.3", optional = true }
thiserror = "1"

[dependencies.cynic]
path = "../cynic"
version = "3"

[dev-dependencies]
assert_matches = "1.4"
insta = "1.4"
maplit = "1.0.2"
reqwest = "0.11"

[dev-dependencies.cynic]
path = "../cynic"
version = "3"
features = ["http-reqwest-blocking"]

[build-dependencies.cynic-codegen]
path = "../cynic-codegen"
version = "3"
