[package]
name = "cynic-introspection"
description = "GraphQL API introspection for cynic"
keywords = ["graphql", "client", "introspection"]
documentation = "https://docs.rs/cynic-introspection"
readme = "README.md"

authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }

[features]
default = ["sdl"]
sdl = ["indenter"]

[dependencies]
indenter = { version = "0.3.3", optional = true }
thiserror = "2"

[dependencies.cynic]
path = "../cynic"
version = "3"

[dev-dependencies]
assert_matches = "1.4"
graphql-mocks.workspace = true
insta.workspace = true
maplit = "1.0.2"
tokio = { version = "1", features = ["macros"] }
reqwest = "0.13"
serde_json = "1"

[dev-dependencies.cynic]
path = "../cynic"
version = "3"
features = ["http-reqwest-blocking"]

[build-dependencies.cynic-codegen]
path = "../cynic-codegen"
version = "3"
