[package]
name = "cynic-parser-deser-macros"
description = "Macros for cynic-parser-deser"
keywords = ["graphql", "parser", "deserialization"]
readme = "README.md"

version = "0.8.3"

homepage = "https://docs.rs/cynic-parser-deser"
documentation = "https://docs.rs/cynic-parser-deser"

authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1"
syn.workspace = true
