[package]
name = "cynic-parser-deser"
version = "0.8.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cynic-parser.workspace = true
cynic-parser-deser-macros.workspace = true
