[package]
name = "cynic-parser"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
print = ["pretty"]
report = ["ariadne"]

[dependencies]
indexmap = "2"
lalrpop-util = "0.20.0"
logos = "0.13"

ariadne = { version = "0.4", optional = true }
pretty = { version = "0.12", optional = true }

[dev-dependencies]
criterion = "0.4"
graphql-parser = "0.4"
insta = "1.29"
similar-asserts = "1.5"

# Tests need the `print` functionality so enable it here
cynic-parser = { path = ".", features = ["print", "report"] }

[build-dependencies]
# Commenting this out as parser-generator does this.
# If actively developing the parser you might want to uncomment this.
# lalrpop = "0.20.0"


[[bench]]
name = "parsing-benchmark"
harness = false