[package]
name = "cynic-parser"
description = "A fast, correct and easy to use GraphQL parser"
keywords = ["graphql", "parser", "api"]
readme = "README.md"

version = "0.1.0"

homepage = "https://docs.rs/cynic-parser"
documentation = "https://docs.rs/cynic-parser"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
print = ["pretty"]
report = ["ariadne"]

[dependencies]
indexmap = "2"
lalrpop-util = "0.20.0"
logos = "0.13"

ariadne = { version = "0.4", optional = true }
pretty = { version = "0.12", optional = true }

[dev-dependencies]
insta = "1.29"
similar-asserts = "1.5"

# Tests need the `print` functionality so enable it here
cynic-parser = { path = ".", features = ["print", "report"] }

# Benchmark bits & bobs
async-graphql-parser = "7"
apollo-parser = "0.7"
divan = "0.1"
graphql-parser = "0.4"

[build-dependencies]
# Commenting this out as parser-generator does this.
# If actively developing the parser you might want to uncomment this.
# lalrpop = "0.20.0"

[[bench]]
name = "executable"
harness = false

[[bench]]
name = "schema"
harness = false

[[bench]]
name = "to-string"
harness = false
