[package]
name = "cynic-proc-macros"
version = "3.0.0-beta.3"
authors = ["Graeme Coupar <graeme@polyandglot.dev>"]
edition = "2018"
homepage = "https://cynic-rs.dev"
repository = "https://github.com/obmarg/cynic"
description = "Procedural macro crate for cynic - a GraphQL query builder & data mapper for Rust"
license = "MPL-2.0"
documentation = "https://docs.rs/cynic-proc-macros"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
rkyv = ["cynic-codegen/rkyv"]

[lib]
proc-macro = true

[dependencies]
cynic-codegen = { path = "../cynic-codegen", version = "3.0.0-beta.3" }
quote = "1"
syn = "1.0.87"
proc-macro2 = "1"
