[package]
name = "cynic-proc-macros"
description = "Procedural macro crate for cynic - a code first GraphQL client for Rust"
documentation = "https://docs.rs/cynic-proc-macros"

authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
rkyv = ["cynic-codegen/rkyv"]

[lib]
proc-macro = true

[dependencies]
cynic-codegen = { path = "../cynic-codegen", version = "3.0.1" }
quote = "1"
syn = "1.0.87"