[package]
version = "0.14.0"
name = "cynic-querygen-web"
repository = "https://github.com/obmarg/cynic"
authors = ["Graeme Coupar<graeme@polyandglot.dev>"]
description = "Web interface for generating cynic query structures from graphql"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.12"

[dependencies]
seed = "0.8.0"

cynic-querygen = { path = "../cynic-querygen" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
