[package]
name = "cynic-querygen"
version = "0.14.0"
authors = ["Graeme Coupar <grambo@grambo.me.uk>"]
edition = "2018"
homepage = "https://cynic-rs.dev"
repository = "https://github.com/obmarg/cynic"
license = "MPL-2.0"
description = "QueryFragment generation for cynic, a GraphQL query builder & data mapper for Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
graphql-parser = "0.3"
rust_decimal = "1.9"
thiserror = "1.0.13"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
assert_matches = "1.4"
insta = "1.4.0"
rstest = "0.7"
