[package]
name = "cynic-querygen"
version = "3.0.0-beta.4"
authors = ["Graeme Coupar <grambo@grambo.me.uk>"]
edition = "2018"
homepage = "https://cynic-rs.dev"
repository = "https://github.com/obmarg/cynic"
license = "MPL-2.0"
description = "QueryFragment generation for cynic, a GraphQL query builder & data mapper for Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = { version = "0.11.4", default-features = false }
graphql-parser = "0.4"
once_cell = "1.9"
rust_decimal = "1.22"
thiserror = "1.0.30"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
assert_matches = "1.4"
insta = "1.17.1"
rstest = "0.11"
