[package]
name = "cynic-querygen"
description = "Generates code for using cynic from GraphQL query input"

authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = { version = "0.11.4", default-features = false }
once_cell = "1.9"
rust_decimal = "1.22"
thiserror = "1.0.30"
uuid = { version = "1", features = ["v4"] }
async-graphql = { version = "7" }

cynic-parser.workspace = true

[dev-dependencies]
assert_matches = "1.4"
insta.workspace = true
rstest.workspace = true
