[package]
name = "cynic"
version = "2.0.0-dev"
authors = ["Graeme Coupar <graeme@polyandglot.dev>"]
edition = "2021"
homepage = "https://cynic-rs.dev"
repository = "https://github.com/obmarg/cynic"
description = "A GraphQL query builder & data mapper for Rust"
keywords = ["graphql", "client", "api"]
license = "MPL-2.0"
documentation = "https://docs.rs/cynic"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
all = ["http-surf", "http-reqwest", "http-reqwest-blocking"]
http-surf = ["surf", "serde_json"]
http-reqwest = ["reqwest", "serde_json"]
http-reqwest-blocking = ["http-reqwest", "reqwest/blocking", "serde_json"]

[dependencies]
cynic-proc-macros = { path = "../cynic-proc-macros", version = "2.0.0-dev" }
serde = { version = "1.0.136", features = [ "derive" ] }
serde_json = { version = "1.0", optional = true }
static_assertions = "1"
thiserror = "1.0.30"

# Surf feature deps
surf = { version = "2.3", default-features = false, optional = true }

# Reqwest feature deps
reqwest = { version = "0.11", optional = true, features = ["json"], default-features = false }

[dev-dependencies]
assert_matches = "1.4"
chrono = { version = "0.4.19", features = ["serde"] }
insta = "1.14"
maplit = "1.0.2"
rstest = "0.12.0"
serde_json = { version = "1.0" }

[package.metadata.docs.rs]
features = ["all"]
rustdoc-args = ["--cfg", "docsrs"]
