[package]
name = "cynic-examples"
version = "0.15.1"
authors = ["Graeme Coupar <grambo@grambo.me.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
github = ["serde_json"]

[dependencies]
cynic = { path = "../cynic", features = ["surf", "reqwest-blocking"] }
cynic-codegen = { path = "../cynic-codegen" }
serde_json = { version = "1.0", optional = true }

# Reqwest example requirements
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.12", features = ["macros"] }

# Surf example requirements
surf = "2.3"
async-std = "1.10"

chrono = { version = "0.4", features = ["serde"]}

[dev-dependencies]
insta = "1.8"
