[package]
name = "graphql-mocks"
publish = false
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql-axum = "7"
async-graphql = { version = "7", features = ["dynamic-schema"] }
async-trait = "0.1"
axum = "0.7"
cynic-parser.workspace = true
cynic-parser.features = ["report"]
futures-lite = "2"
headers = "0.4"
serde = "1"
serde_json = "1"
tokio = "1"
crossbeam-queue = "0.3"
http = "1"
url = "2"
