[package]
name = "xtask"
version = "0.1.0"
authors = ["Graeme Coupar <grambo@grambo.me.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
proc-macro2 = "1.0"
quote = "1.0"
ungrammar = "1.13.0"
xflags = "0.2.1"
xshell = "0.1.11"