[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cynic = { version = "3.4.3", features = ["http-reqwest-blocking"] }
query = { path = "../query"}
reqwest = { version = "0.11.24", features = ["json", "blocking"] }
