[package]
name = "querygen-compile-run"
version = "0.1.0"
authors = ["Graeme Coupar <graeme@polyandglot.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cynic = { path = "../../cynic" }
serde_json = "1.0"
ureq = { version = "2.4", features = ["json"] }

[dev-dependencies]
trybuild = "1.0"

[build-dependencies]
cynic-querygen = { path = "../../cynic-querygen" }
