[package]
name = "querygen-compile-run"
version = "0.1.0"
authors = ["Graeme Coupar <graeme@polyandglot.dev>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cynic = { path = "../../cynic" }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
graphql-mocks.workspace = true
tokio = { version = "1", features = ["macros"] }
trybuild = "1.0.80"

[build-dependencies]
cynic-codegen = { path = "../../cynic-codegen" }
cynic-querygen = { path = "../../cynic-querygen" }
indoc = "2"
