[package]
name = "ui-tests"
version = "0.1.0"
authors = ["Graeme Coupar <grambo@grambo.me.uk>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
cynic = { path = "../../cynic" }
serde_json = "1.0"
trybuild = "1.0"
