[package]
name = "query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cynic = { version = "3.4.3", features = ["rkyv"] }
schema = { path = "../schema" }

[build-dependencies]
cynic-codegen = { version = "3.4.3", features = ["rkyv"] }
