[workspace]

[package]
name = "queries"
version = "0.1.0"
authors = ["Graeme Coupar <grambo@grambo.me.uk>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cynic = { path = "../../../cynic" }
chrono = { version = "0.4.19", features = ["serde"] }
